--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RISHAD WEBSITE</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <h1>Hello This my first git hub push</h1>
-    <h2>Lets push this things second time</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, recusandae incidunt? Quidem exercitationem repudiandae ut autem, perspiciatis quibusdam? Magnam voluptatem quaerat minus asperiores cupiditate nostrum adipisci ex suscipit deleniti facilis molestiae tenetur quae architecto nisi, excepturi saepe? Sed, alias debitis? Voluptatem non dolores repellendus quod quidem doloremque voluptatum delectus mollitia.</p>
+  <section class="header">
+      <div class="half-width">     
+        <h1>Welcome To</h1>
+        <h1><span>Rishad</span> WebSite</h1>
+        <h3>A Profesional Web-Developer</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, quisquam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid expedita consectetur amet, qui suscipit. Iusto ea autem facere incidunt.</p><br>
+        <a class="button-style" target="_blank" href="">Hire Me</a>
+    </div>
+        <div class="half-width" ><img src="image/font.png" alt=""></div>
+  </section>
+  <section class="dream">
+      <div class="half-width"> <img src="image/mid.png" alt=""></div>
+      <div class="half-width">
+          <h2>Dream Big</h2>
+          <h3>Become a Web-Developer</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos animi veniam est quaerat fugit architecto repudiandae eveniet suscipit reprehenderit quidem.</p><br>
+          <a class="button-style" target="_blank" href="">Vist MY Profile</a>
+      </div>
+  </section>
 </body>
 </html>
