--- a/index.html
+++ b/index.html
@@ -21,12 +21,27 @@
   </section>
   <section class="dream">
       <div class="half-width"> <img src="image/mid.png" alt=""></div>
-      <div class="half-width">
+      <div class="half-width fullsize">
           <h2>Dream Big</h2>
           <h3>Become a Web-Developer</h3>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos animi veniam est quaerat fugit architecto repudiandae eveniet suscipit reprehenderit quidem.</p><br>
           <a class="button-style" target="_blank" href="">Vist MY Profile</a>
       </div>
   </section>
+  <section class="experience">
+      <h2>Experiences</h2>
+      <div id="fullstack" class="half-width box1 ">
+        <h2><span>Full Stack Web-Dev</span></h2>
+        <h3>2020-Present | Pro Level Dev</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus quidem placeat adipisci iste dolores omnis dolorem perspiciatis tempore quod!</p>
+      </div>
+      <div  id="badyweb" class="half-width box1">
+        <h2><span>Baby Web-Developer</span></h2>
+        <h3>2020-2021 | Programming Hero Leaner</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, cupiditate enim? Nostrum vitae pariatur incidunt beatae omnis quia minus repudiandae.</p>
+      </div>
+
+  </section>
+  <footer></footer>
 </body>
 </html>
