--- a/index.html
+++ b/index.html
@@ -3,45 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RISHAD WEBSITE</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Rishad Website</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-  <section class="header">
-      <div class="half-width">     
+    <section class="header">
+    <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span>Rishad</span> WebSite</h1>
-        <h3>A Profesional Web-Developer</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, quisquam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid expedita consectetur amet, qui suscipit. Iusto ea autem facere incidunt.</p><br>
-        <a class="button-style" target="_blank" href="">Hire Me</a>
+        <h1>Rishad Website</h1>
+        <h3>Bulid Your Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt aliquid iusto enim velit neque, adipisci veniam omnis earum perferendis, odio veritatis porro libero ducimus, ea ratione fuga assumenda voluptates. Maxime.</p>
+        <a class="button-text" href="">Hired Me</a>
     </div>
-        <div class="half-width" ><img src="image/font.png" alt=""></div>
-  </section>
-  <section class="dream">
-      <div class="half-width"> <img src="image/mid.png" alt=""></div>
-      <div class="half-width fullsize">
-          <h2>Dream Big</h2>
-          <h3>Become a Web-Developer</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos animi veniam est quaerat fugit architecto repudiandae eveniet suscipit reprehenderit quidem.</p><br>
-          <a class="button-style" target="_blank" href="">Vist MY Profile</a>
-      </div>
-  </section>
-  <section class="experience">
-      <h2>Experiences</h2>
-      <div id="fullstack" class="half-width box1 ">
-        <h2><span>Full Stack Web-Dev</span></h2>
-        <h3>2020-Present | Pro Level Dev</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus quidem placeat adipisci iste dolores omnis dolorem perspiciatis tempore quod!</p>
-      </div>
-      <div  id="badyweb" class="half-width box1">
-        <h2><span>Baby Web-Developer</span></h2>
-        <h3>2020-2021 | Programming Hero Leaner</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, cupiditate enim? Nostrum vitae pariatur incidunt beatae omnis quia minus repudiandae.</p>
-      </div>
+    <div class="half-width">
+        <img src="image/font.png" alt="">
+    </div> 
+   
 
-  </section>
-  <footer></footer>
+    </section>
+    <section class="dream">
+        <div class="half-width">
+            <img src="image/mid.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h2>Dream Section</h2>
+            <h3>Complete your dream</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, temporibus, non exercitationem nisi aliquam repellendus quam vel hic adipisci quo iusto facilis possimus porro, voluptatem dolores voluptates similique. Soluta, quod?</p>
+            <a class="button-text" href="">Visit My Site</a>
+        </div>
+
+    </section>
+
+    <section class="exprience">
+        <h2>Exprience</h2>
+        <div id="boder1" class="half-width single">
+            <h2>Web Deveploer</h2>
+            <h3>2020-Present | Web Deveploer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nesciunt vel corporis eligendi facere fugiat alias, quasi eos nulla ullam!</p>
+        </div>
+        <div id="boder1" class="half-width single">
+            <h2>Web Deveploer</h2>
+            <h3>2020-Present | Web Deveploer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nesciunt vel corporis eligendi facere fugiat alias, quasi eos nulla ullam!</p>
+        </div>
+
+    </section>
+    <footer>Copyright © 2020 Rishad WEB Deveploer</footer>
 </body>
 </html>
